@@ -100,8 +100,8 @@ ifneq ($(DEB_HOST_ARCH),$(DEB_BUILD_ARCH))
 CC     = $(DEB_HOST_GNU_TYPE)-gcc
 CXX    = $(DEB_HOST_GNU_TYPE)-g++
 else
-CC     = gcc-4.3
-CXX    = gcc-4.3
+CC     = gcc-4.4
+CXX    = g++-4.4
 endif
 
 BUILD_CFLAGS = -O2 -g
