@@ -1,1 +1,4 @@
+CC = gcc-4.3
+CXX = g++-4.3
+
 libc_add-ons = ports nptl $(add-ons)
