@@ -1,3 +1,6 @@
+CC = gcc-4.3
+CXX = g++-4.3
+
 libc_slibdir = /lib
 libc_libdir = /usr/lib
 libc_rtlddir = /lib64
